# libspotifywrapper

./: README.md  bootstrap  configure.in
src/: Makefile.am  apiwrapper.h  autogen_api.c  autogen_libspotify.c  libspotifywrapper.c
